--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blurp",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "Stream based Logger using Transports.",
   "main": "dist/index.js",
   "scripts": {
@@ -54,9 +54,12 @@
     "@types/one-time": "0.0.1",
     "@types/readable-stream": "^2.3.4",
     "@types/stack-trace": "0.0.29",
+    "bunyan": "^1.8.12",
     "chai": "^4.2.0",
+    "fastbench": "^1.0.1",
     "rimraf": "^3.0.0",
     "ts-node": "^8.3.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "winston": "^3.2.1"
   }
 }
