--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "blurp",
-  "version": "0.1.17",
+  "version": "0.1.18",
   "description": "Stream based Logger using Transports.",
   "main": "dist/index.js",
   "scripts": {
     "clean": "rimraf ./dist",
-    "build": "npm run clean && tsc",
+    "build": "npm run clean && tsc -b",
     "start": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -53,7 +53,6 @@
     "@types/chai": "^4.2.0",
     "@types/express": "^4.17.1",
     "@types/fs-extra": "^8.0.0",
-    "@types/jsonata": "^1.3.1",
     "@types/lodash.isequal": "^4.5.5",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.2",
